src/styles/components/queries.scss
    body.theme--light {
        background-color: $c-white-bg;
        color:$c-black;
    }
    nav.theme--light {
        color:$c-black;
    } 
    .theme--light {
        .footer-ul__el--link a{
            color:$c-black;
        }
        .container-project__button--website {
            color:$c-black;
        }
        .social-ul__el {
            &--instagram a {
                background-image: url("../assets/icons/instagram.svg");
            }
            &--dribbble a {
                background-image: url("../assets/icons/dribbble.svg");
            }
            &--linkedin a {
                background-image: url("../assets/icons/linkedin.svg");
            }
        }
        .icon {
            &--reload {
                background-image: url("../assets/icons/reload.svg");
            }
            &--theme {
                background-image: url("../assets/icons/theme.svg");
            }
            &--line {
                background-image: url("../assets/icons/line.svg");
            }
        }

    }



// Desktop
@media (min-width:$desktop) {
    .article {
        max-width: 600px;
        position: absolute;
        left:50%;
        margin-left:-300px;
        &__img {
          max-width: 600px;
        }
      }

    .icon {
        &--reload {
            position: absolute;
            transform: translateX(-20px);
        }
    }
    .tagline {
        display: inline-block;
        width: 474px;
        min-height: auto;
        margin-right: 91px;
    }
    .container-project {
        &__thumb {
            width: 93%;
            margin-bottom: 16px;
            margin-left:52px;
            display: inline-block;

        }
        &__summary {
            margin-top:32px;
            margin-left:53px;
            margin-bottom: 32px;
            max-width: 543px;
        }
        &__button {
            margin-right: 16px;
            margin-left: 53px;
            &--website {
                margin-left: 0px;
            }
        }
        &__category {
            position: absolute;
            margin-top: 39px;
            
        }
        .icon--line {
            transform: rotate(90deg);
            margin-left: -22px;
            display: block;
        }
        &__category p {
            margin-bottom: -286px;
            writing-mode: vertical-lr;
            transform: translateY(23px);
            display: inline-block;
            font-style: italic;
        }
    }
    .section {
        &__hero {
            display: flex;
            width: 100%;
            height: 85vh;
            justify-content: space-between;
            transform:inherit;
        }
    }
    .content {
        max-width: 433px;
        display: inline-block;
    }
    .avatar {
        margin-top:100px;
    }
    .nav {
        margin: initial;
        float:right;
        width: 65%;
    }

    body {
        max-width: 933px;
        margin:0 auto;
    }
    .delayed-section--img {
        float: right;
    }

    .js-case {
        transform: translateX(-160px);
    }
    .hero-content {
        margin-left:300px;
        position: absolute;
        top:50%;
        transform: translateY(-50%);
    }
    .background {
        &--hero {
            width: 30%;
            top: 0;
            height: 100%;
            left: 0px;
            max-width: 1650px;
            position: absolute;
        }
        &--about {
            display:block;
        }
        &--footer {
            p {
                margin: 0 auto;
            }
        }
        &--project {
            width: 340px;
            height: 670px;
            right: -238px;
            top:-50px;
        }

    }
    .content {
        display: inline-block;
        max-width: 500px;
    }
    footer {
        flex-direction: row;
        width: 933px;
    }
}


// very large screen
@media (min-width:$large) {

}

// tight width 

@media (max-width:360px) {
    nav {
        margin-top:24px;
    }

}

